--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.2.1",
     "ngx-bootstrap": "^1.9.3",
     "popper": "^1.0.0",
+    "popper.js": "^1.12.6",
     "rxjs": "^5.4.2",
     "tether": "^1.4.0",
     "zone.js": "^0.8.14"
